# DeepLearningAI-PyTorch

./: .gitignore  README.md  pyproject.toml  pytorch.py  requirements.txt
dlai_pytorch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src1/: C1_M1_Lab_1_simple_nn.ipynb
src1/pkg_a/: example.py  helper_utils.py  non-linear.py  vector.py
src1/pkg_a/notebooks/: C1_M1_Lab_1_simple_nn.ipynb  C1_M1_Lab_2_activation_functions.ipynb
